# agentic

./: .cz.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: orchestrator.md
.claude/hooks/: strategic_compact.py  test_strategic_compact.py
.claude/skills/adr/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-agent/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/strategic-compact/: SKILL.md
.github/workflows/: bump.yaml  tag-on-merge.yaml
docs/decisions/: 0001-granular-symlink-dotfiles.md  0002-markdown-per-agent-architecture.md  0003-commitizen-versioning.md  0004-orchestrator-default-agent.md  0005-google-style-docstrings.md  0006-pretooluse-hook-strategic-compact.md
