[project]
name = "agentic"
version = "0.1.0"
description = "Versioned Claude Code configuration: agents, skills, hooks, and settings."
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [".claude/hooks"]
